add visualisation obj and bin folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ JellyDb.Core.Test/obj
 JellyDb.Core/bin
 JellyDb.Core/obj
 *.suo
-JellyDb.Visualisations/obj/*
+JellyDb.Visualisations/obj
+JellyDb.Visualisations/bin
