--- a/JellyDb.Core.Test/JellyDb.Core.Test.csproj
+++ b/JellyDb.Core.Test/JellyDb.Core.Test.csproj
@@ -62,6 +62,9 @@
   <ItemGroup>
     <Compile Include="Integration\VirtualAddressSpace\PageIndexTest.cs" />
     <Compile Include="Performance\BPTreeNodeTest.cs" />
+    <Compile Include="Performance\BranchingFactorGroup.cs" />
+    <Compile Include="Performance\BranchingFactorGroupResult.cs" />
+    <Compile Include="Performance\PerformanceTestResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit\Configuration\DbEngineConfigurationSectionTest.cs" />
     <Compile Include="Unit\Configuration\VirtualFileSystemConfigurationTest.cs" />
