refactor node to generic

--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -99,7 +99,9 @@
     <Compile Include="Sql\Dml\Term.cs" />
     <Compile Include="Sql\Dml\ValueTerm.cs" />
     <Compile Include="Storage\BPTreeNode.cs" />
-    <Compile Include="Storage\NodeData.cs" />
+    <Compile Include="Storage\IntComparer.cs" />
+    <Compile Include="Storage\ITypeComparer.cs" />
+    <Compile Include="Storage\TypeComparer.cs" />
     <Compile Include="VirtualAddressSpace\FileDataPersistence.cs" />
     <Compile Include="ExpirationManager.cs" />
     <Compile Include="VirtualAddressSpace\IViewManager.cs" />
@@ -114,7 +116,9 @@
   <ItemGroup>
     <None Include="Sql\Dml\SelectStatement.cd" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Database\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
