--- a/JellyDb.Visualisations/JellyDb.Visualisations.csproj
+++ b/JellyDb.Visualisations/JellyDb.Visualisations.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\BTreeViewModel.cs" />
+    <Compile Include="ViewModels\IntTreeNode.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\PerfTestResultsViewModel.cs" />
     <Page Include="Controls\BTree.xaml">
