working through tests for bpnode and filedata persister

--- a/JellyDb.Core.Test/JellyDb.Core.Test.csproj
+++ b/JellyDb.Core.Test/JellyDb.Core.Test.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -69,7 +70,6 @@
     <Compile Include="Unit\Configuration\DbEngineConfigurationSectionTest.cs" />
     <Compile Include="Unit\Configuration\VirtualFileSystemConfigurationTest.cs" />
     <Compile Include="Integration\VirtualAddressSpace\FileDataPersistenceTest.cs" />
-    <Compile Include="Unit\Sql\Dml\AdditionOperatorTest.cs" />
     <Compile Include="Unit\Storage\BPTreeNodeTest.cs" />
     <Compile Include="Unit\VirtualAddressSpace\PageIndexTest.cs" />
     <Compile Include="Unit\VirtualAddressSpace\PageSummaryTest.cs" />
