--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Engine\Fun\Index.cs" />
     <Compile Include="Engine\Fun\IndexResult.cs" />
     <Compile Include="Engine\Fun\NodeExtensions.cs" />
+    <Compile Include="Extensions\LongExtensions.cs" />
     <Compile Include="Sql\Dml\ArithmeticOperationTypeEnum.cs" />
     <Compile Include="Sql\Dml\FloatValueTerm.cs" />
     <Compile Include="Sql\Dml\AdditionOperator.cs" />
