--- a/JellyDb.Core.Test/App.config
+++ b/JellyDb.Core.Test/App.config
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <sectionGroup name="DbEngine">
-      <section name="DbEngineConfig" type="JellyDb.Core.Configuration.DbEngineConfigurationSection, JellyDb.Core"/>
-      <section name="VirtualFileSystemConfig" type="JellyDb.Core.Configuration.VirtualFileSystemConfigurationSection, JellyDb.Core"/>
-    </sectionGroup>
+      <section name="JellyDb" type="JellyDb.Core.Configuration.DbEngineConfigurationSection, JellyDb.Core"/>
   </configSections>
   
-  <DbEngine>
-    <!--<DbEngineConfig dbfilename="c:\temp\DbEngine.db"/>-->
-    <VirtualFileSystemConfig pagesizekb="65536" pagesincreasenum="4" vfsfilename="c:\Temp\DbEngine.db"/>
-  </DbEngine>
+  <JellyDb folderpath="c:\temp">
+    <VirtualFileSystemConfig pagesizekb="65536" pagesincreasenum="4"/>
+  </JellyDb>
 </configuration>
