Read/Write index. partial read data from page

--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\Fun\Database.cs" />
+    <Compile Include="Engine\Fun\DataItem.cs" />
     <Compile Include="Engine\Fun\DataPage.cs" />
     <Compile Include="Engine\Fun\Index.cs" />
     <Compile Include="Extensions\NodeExtensions.cs" />
