start on database tests

--- a/JellyDb.Core.Test/JellyDb.Core.Test.csproj
+++ b/JellyDb.Core.Test/JellyDb.Core.Test.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit\Configuration\DbEngineConfigurationSectionTest.cs" />
     <Compile Include="Integration\VirtualAddressSpace\FileDataPersistenceTest.cs" />
+    <Compile Include="Unit\Engine\DatabaseTest.cs" />
     <Compile Include="Unit\Storage\BPTreeNodeTest.cs" />
     <Compile Include="Unit\VirtualAddressSpace\PageIndexTest.cs" />
     <Compile Include="Unit\VirtualAddressSpace\PageSummaryTest.cs" />
