--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine\Fun\DataWritableBase.cs" />
     <Compile Include="Engine\Fun\LongComparer.cs" />
     <Compile Include="Engine\Fun\Database.cs" />
     <Compile Include="Engine\Fun\DataItem.cs" />
