--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -56,12 +56,14 @@
     <Compile Include="Client\JellyDatabase.cs" />
     <Compile Include="Client\JellyRecord.cs" />
     <Compile Include="Client\JellySession.cs" />
+    <Compile Include="Engine\Fun\DataKey.cs" />
     <Compile Include="Engine\Fun\DataWritableBase.cs" />
+    <Compile Include="Engine\Fun\IDatabase.cs" />
+    <Compile Include="Engine\Fun\IIndex.cs" />
     <Compile Include="Engine\Fun\LongComparer.cs" />
     <Compile Include="Engine\Fun\Database.cs" />
     <Compile Include="Engine\Fun\DataItem.cs" />
     <Compile Include="Engine\Fun\Index.cs" />
-    <Compile Include="Engine\Fun\StringComparer.cs" />
     <Compile Include="Extensions\NodeExtensions.cs" />
     <Compile Include="Extensions\LongExtensions.cs" />
     <Compile Include="VirtualAddressSpace\AddressSpaceIndex.cs" />
