--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -53,9 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Client\IJellyRecord.cs" />
+    <Compile Include="Client\IKeyGenerator.cs" />
     <Compile Include="Client\JellyDatabase.cs" />
     <Compile Include="Client\JellyRecord.cs" />
     <Compile Include="Client\JellySession.cs" />
+    <Compile Include="Client\KeyGenerator.cs" />
     <Compile Include="Engine\Fun\DataKey.cs" />
     <Compile Include="Engine\Fun\DataWritableBase.cs" />
     <Compile Include="Engine\Fun\IDatabase.cs" />
