work on read/write and unit test

--- a/JellyDb.Core.Test/JellyDb.Core.Test.csproj
+++ b/JellyDb.Core.Test/JellyDb.Core.Test.csproj
@@ -61,6 +61,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Integration\Client\JellyDatabaseTest.cs" />
     <Compile Include="Integration\VirtualAddressSpace\PageIndexTest.cs" />
     <Compile Include="Performance\BPTreeNodeTest.cs" />
     <Compile Include="Performance\BranchingFactorGroup.cs" />
