--- a/JellyDb.Core.Test/App.config
+++ b/JellyDb.Core.Test/App.config
@@ -4,7 +4,7 @@
       <section name="JellyDb" type="JellyDb.Core.Configuration.DbEngineConfigurationSection, JellyDb.Core"/>
   </configSections>
   
-  <JellyDb folderpath="c:\temp">
+  <JellyDb folderpath="c:\temp\jelly">
     <VirtualFileSystemConfig pagesizekb="1024" pagesincreasenum="4"/>
   </JellyDb>
 </configuration>
