--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\JellyDb.Core.Test\packages.config" />
   <repository path="..\JellyDb.Core\packages.config" />
   <repository path="..\JellyDb.Visualisations\packages.config" />
 </repositories>
