more work on node refactor

--- a/JellyDb.Core/JellyDb.Core.csproj
+++ b/JellyDb.Core/JellyDb.Core.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Engine\Spicy\IntWorker.cs" />
     <Compile Include="Engine\Spicy\ITypeWorker.cs" />
     <Compile Include="Engine\Spicy\LongWorker.cs" />
+    <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Extensions\NodeExtensions.cs" />
     <Compile Include="Extensions\NumberExtensions.cs" />
     <Compile Include="Storage\BinaryReaderWriter.cs" />
